@@ -205,7 +205,7 @@ SEE ALSO
         Install the Map::Tube concrete metro modules.
 
 REPOSITORY
-    <https://github.com/tupinek/Map-Tube-Kharkiv>
+    <https://github.com/michal-josef-spacek/Map-Tube-Kharkiv>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
