@@ -1,5 +1,6 @@
 0.07
  - Update Module::Install to 1.21 version.
+ - Update author github username.
  - Update copyright years.
 
 0.06 2017-11-23T08:48:51+01:00
